version 6.0-SNAPSHOT
date: dd/MM/yyyy
  * Extended the service MAPLE to generated a report on the problem of matching two given datasets
  * Removed the redundant indication of the role of predicates in the Resource View
  * Added the possibility to specify a template for enriching the output of predefined rendering engines
    (e.g. to include a skos:notation)
  * Fixed some compatibility issues with Java 11
  * Fixed "authorization denied" when replacing an IRI value via Resources.updateTriple()
  * Fixed the possibility to have more prefixed for the same namespace
  * Updated to lime-api 0.3.3
  * Updated to maple 0.0.3

version 5.0
date: 30/01/2019
  * Added extension point for connecting to dataset catalogs, together with implementations targeting
  	Linked Open Vocabularies (https://lov.linkeddata.es/dataset/lov/) and the LOD Cloud (https://lod-cloud.net/)
  * Added the possibility to preload data into a project being created, including data retrieved through the 
    dataset catalog connection
  * Added functionality for owl:importing vocabularies retrieved through the dataset catalog connection
  * Updated e-mail configuration;
  * Added email notification when a user is enabled by the administrator
  * Added user status (online/offline) to the users list 
  * Improved speed of advanced search
  * Allowed CustomForm and FormCollection with custom namespaces
  * Enabled mass assignment of concepts to a scheme
  * Implemented support for Graph visualization
  * Added stackTrace info in error response and changed the serialization to JSON format;
  * Add the possibility to filter the commits shown in the History and Validation tabs by performer and
    validator (obviously, history only)
  * Fixed SKOS vocabulary not loaded, if SKOS is used only as model (and not as lexicalization model);
  * Added validation of RDF values (in particular, IRIs and literals) provided as arguments to the services