@@ -4,6 +4,8 @@ date: dd/MM/yyyy
   * Removed the redundant indication of the role of predicates in the Resource View
   * Added the possibility to specify a template for enriching the output of predefined rendering engines
     (e.g. to include a skos:notation)
+  * Fixed exception about missing configuration when exporting the results of a SPARQL graph query after the
+    application of some RDFTransformers
   * Fixed some compatibility issues with Java 11
   * Fixed "authorization denied" when replacing an IRI value via Resources.updateTriple()
   * Fixed the possibility to have more prefixed for the same namespace
